[gd_scene load_steps=5 format=3 uid="uid://bjgvqyaa1xej3"]

[ext_resource type="Script" path="res://scripts/gravity_box.gd" id="1_482tr"]
[ext_resource type="Texture2D" uid="uid://c6s74e770f1gc" path="res://images/elements/GravityBox_blue.png" id="2_bsk2c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dlcj"]
size = Vector2(35, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v2b8s"]
size = Vector2(45, 25)

[node name="GravityBox" type="RigidBody2D" groups=["Boxes"]]
collision_layer = 4
collision_mask = 15
lock_rotation = true
freeze_mode = 1
contact_monitor = true
max_contacts_reported = 4
script = ExtResource("1_482tr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_bsk2c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_7dlcj")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -2.5)
shape = SubResource("RectangleShape2D_v2b8s")
debug_color = Color(0.340056, 0.616411, 0.230027, 0.42)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
